--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.003
+version = 0.001
 
 name    = ColorThemes-Standard
 
@@ -9,10 +9,7 @@ name    = ColorThemes-Standard
 
 [Prereqs]
 parent=0
-strict=0
-warnings=0
-Color::RGB::Util=0.600
-ColorThemeBase::Base=0
+ColorThemeBase::Static::FromStructColors=0.006
 
 [Prereqs / DevelopX_spec]
 -phase=develop
